# cw-template

./: Cargo.toml  README.md  cargo-generate.toml
src/: contract.rs  interface.rs  lib.rs  msg.rs
src/tests/: common.rs  golem.rs
